# bergmann

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
bergmann/: app.py  bergmann.tcss  convention.py  di.py  failures_presenter.py  file_db_helper.py  files_helper.py  gateway.py  interactor.py  key.py  main.py  passwords_interactor.py  passwords_model.py
bergmann/common/: __init__.py  exceptions.py  logger.py  ru_keys.py
bergmann/crypto/: kuzcypher.py
bergmann/entities/: db_meta.py  encrypted_item.py  header.py  item.py  load_db_result.py  store.py  store_meta.py
bergmann/models/: location.py
bergmann/ui/: app.py  helpers.py
bergmann/ui/validators/: file_already_exists_validator.py
bergmann/ui/widgets/passwords_modal/: initialize_new_db_modal.py  item_fields_modal.py  load_db_modal.py  passwords_explorer.py
bergmann/ui/widgets/select_file_modal/: bmn_filtered_directory_tree.py  create_file_modal.py  select_file_modal.py
bergmann/validators/: bmn_filename_validator.py
bergmann/widgets/: select_location_screen.py  welcome.py
bergmann/widgets/passwords_modal/: initialize_new_db_modal.py  item_fields_modal.py  load_db_modal.py  passwords_explorer.py  passwords_modal.py  passwords_table.py
bergmann/widgets/select_file_modal/: bmn_filtered_directory_tree.py  create_file_modal.py  select_file_header.py  select_file_modal.py
tests/: new-db.bmn  test_gateway.py  test_passwords_interactor.py  test_passwords_model.py
tests/crypto/: test_cypher.py
