[tool.poetry]
name = "bergmann"
version = "0.0.0"
description = "Password manager"
authors = ["Sviatoslav Bobryshev <wstswsb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.61.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pyright = "^1.1.363"
pre-commit = "^3.7.1"
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
